--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "browser-sync": "^2.23.6",
     "dat-gui": "^0.5.0",
     "dat.gui": "^0.7.1",
+    "empty": "^0.10.1",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
+    "lodash": "^4.17.5",
+    "page": "^1.8.3",
     "stats.js": "^0.17.0",
     "three": "^0.90.0",
     "vue": "^2.5.13",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "yo-yo": "^1.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
