--- a/package.json
+++ b/package.json
@@ -9,25 +9,31 @@
   "author": "josesan",
   "license": "MIT",
   "dependencies": {
-    "browser-sync": "^2.23.6",
-    "dat-gui": "^0.5.0",
-    "dat.gui": "^0.7.1",
     "empty": "^0.10.1",
-    "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0",
     "lodash": "^4.17.5",
     "page": "^1.8.3",
-    "stats.js": "^0.17.0",
     "three": "^0.90.0",
-    "vue": "^2.5.13",
-    "webpack": "^3.10.0",
     "yo-yo": "^1.4.1"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "browser-sync": "^2.23.6",
+    "dat-gui": "^0.5.0",
+    "dat.gui": "^0.7.1",
+    "es2017": "0.0.0",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
+    "stats.js": "^0.17.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "standard": "^10.0.3",
+    "webpack": "^3.11.0",
+    "webpack-async-await": "^1.1.0",
     "webpack-stream": "^4.0.0"
   }
 }
