--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "josesan",
   "license": "MIT",
   "dependencies": {
+    "async": "^2.6.0",
     "empty": "^0.10.1",
     "lodash": "^4.17.5",
     "page": "^1.8.3",
