--- a/package.json
+++ b/package.json
@@ -20,22 +20,23 @@
     "yo-yo": "^1.4.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.23.6",
     "dat-gui": "^0.5.0",
     "dat.gui": "^0.7.1",
     "es2017": "0.0.0",
     "gulp": "^3.9.1",
+    "gulp-newer": "^1.4.0",
     "gulp-sass": "^3.1.0",
-    "stats.js": "^0.17.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
     "standard": "^10.0.3",
+    "stats.js": "^0.17.0",
     "webpack": "^3.11.0",
     "webpack-async-await": "^1.1.0",
     "webpack-stream": "^4.0.0"
