--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-sass": "^3.2.1",
     "standard": "^10.0.3",
     "stats.js": "^0.17.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^3.12.0",
     "webpack-async-await": "^1.1.0",
     "webpack-stream": "^4.0.3"
