--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.10",
     "masonry-layout": "^4.2.1",
     "page": "^1.8.6",
+    "parse5": "^5.1.0",
     "postprocessing": "^4.6.0",
     "three": "^0.90.0",
     "three.proton.js": "^0.1.5",
