--- a/package.json
+++ b/package.json
@@ -28,24 +28,33 @@
     "yo-yo": "^1.4.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel": "^6.23.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
+    "babel-minify": "^0.4.3",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
+    "babel-preset-minify": "^0.4.3",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.24.4",
     "dat-gui": "^0.5.0",
     "dat.gui": "^0.7.2",
     "es2017": "0.0.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^8.0.0",
     "gulp-newer": "^1.4.0",
     "gulp-sass": "^3.2.1",
+    "gulp-uglify": "^3.0.1",
+    "pump": "^3.0.0",
     "standard": "^10.0.3",
     "stats.js": "^0.17.0",
-    "uglifyjs-webpack-plugin": "^1.2.7",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^3.12.0",
     "webpack-async-await": "^1.1.0",
     "webpack-stream": "^4.0.3"
